# ebash

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-ci-cd.yml
diagrams/: classes.drawio
ebash_lib/: bash_core.py  bash_parser.py
ebash_lib/common/: command.py  context.py  parser.py
src/ebash_lib/: bash_core.py  bash_parser.py
src/ebash_lib/common/: command.py  context.py  parser.py
src/outdated/: command.py
src/tests/: test_lexer.py  test_parser.py
src/tests/commands/: test_cd_ls.py
tests/: test_lexer.py  test_parser.py
